# libnrfu

./: LICENSE  README.md  meson.build  meson_options.txt
bindings/python/: meson.build  nrfumodule.c
bindings/python/examples/: nrf-update.py
include/: meson.build  nrfu.h
lib/: meson.build  nrfu.c  serial.c  serial.h  toolbox.c  toolbox.h
tools/: meson.build  nrf-update.c
